[gd_scene load_steps=6 format=2]

[ext_resource path="res://png/wall.png" type="Texture" id=1]
[ext_resource path="res://Door.gd" type="Script" id=2]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment() {
	COLOR = texture(TEXTURE,UV);
	COLOR.a = COLOR.g;
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[node name="Door" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 64, 0 )
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 32, 32 )
shape = SubResource( 3 )

[node name="EventArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EventArea"]
position = Vector2( -32, 32 )
shape = SubResource( 3 )

[node name="EventArea2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EventArea2"]
position = Vector2( 32, 32 )
shape = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="EventArea" to="." method="_on_EventArea_body_entered"]
[connection signal="body_exited" from="EventArea2" to="." method="_on_EventArea2_body_exited"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
